--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
 
             <div class="box-with-text">
                 <div class="box"></div>
-                <p class="box-text">This is some subtext under an illustration or image.</div>
+                <p class="box-text">This is some subtext under an illustration or image.</p>
             </div>
 
             <div class="box-with-text">
                 <div class="box"></div>
-                <p class="box-text">This is some subtext under an illustration or image.</div>
+                <p class="box-text">This is some subtext under an illustration or image.</p>
             </div>
 
             <div class="box-with-text">
                 <div class="box"></div>
-                <p class="box-text">This is some subtext under an illustration or image.</div>
+                <p class="box-text">This is some subtext under an illustration or image.</p>
             </div>
             
             <div class="box-with-text">
                 <div class="box"></div>
-                <p class="box-text">This is some subtext under an illustration or image.</div>
+                <p class="box-text">This is some subtext under an illustration or image.</p>
             </div>
 
         </div>
