Implement section 1 roughly

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     <div class="main">
         <!-- intro -->
         <div class="section1">
-            <h1>John Durrian</h1>
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <button>Sign up</button>
+            <div class="container">
+                <h1>John Durrian</h1>
+                <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <button>Sign up</button>
+            </div>
 
             <img class="profile-pic" src="./images/JD_water.png" alt="Man with face half in water.">
         </div>
@@ -57,8 +59,8 @@
 
         <!-- qoute -->
         <div class="section3">
-            <p class="quote">"I usually don’t like thinking about the future, but I’m doing it anyway."</div>
-            <p class="quote-source">Dr. John (J.D.) Dorian</div>
+            <p class="quote">"I usually don’t like thinking about the future, but I’m doing it anyway."</p>
+            <p class="quote-source">Dr. John (J.D.) Dorian</p>
         </div>
 
         <!-- call to action -->
