Add logo in header

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
   <body>
     <div class="header">
       <div class="logo">
-        Header Logo
+        <img src="./images/user-svgrepo-com.svg" alt="User icon white.">  
       </div>
+      
+      
       <ul class="header-links">
         <li>header link one</li>
         <li>header link two</li>
         <li>header link three</li>
       </ul>
     </div>
-    <!-- <img class="avatar proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses"> -->
+
     <div class="main">
         <!-- intro -->
         <div class="section1">
