Implement section 3 roughly

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- qoute -->
         <div class="section3">
             <p class="quote">"I usually don’t like thinking about the future, but I’m doing it anyway."</p>
-            <p class="quote-source">Dr. John (J.D.) Dorian</p>
+            <p class="quote-source">-Dr. John (J.D.) Dorian</p>
         </div>
 
         <!-- call to action -->
