--- a/index.html
+++ b/index.html
@@ -69,10 +69,16 @@
 
         <!-- call to action -->
         <div class="section4">
-            <h3>Call to action! It's time!</h3>
-            <p class="text">Sign up for our podcast: click that nice button!</p>
 
-            <button>Sign up</button>
+            <div class ="container">
+                <div class="container">
+                    <h3>Call to action! It's time!</h3>
+                    <p class="text">Sign up for our podcast: click that nice button!</p>
+                </div>
+                
+                <button class="cta-button">Sign up</button>
+            </div>
+            
         </div>
 
     </div>
